# GameOfLifePRiR

./: Board.cpp  Board.h  CMakeLists.txt  GameOfLife.cpp  GameOfLife.h  GameOfLifeCUDA.cu  GameOfLifeCUDA.h  GameOfLifeMPI.cpp  GameOfLifeMPI.h  GameOfLifeOMP.cpp  GameOfLifeOMP.h  benchmark.cpp  benchmark_MPI.cpp  benchmark_cuda.cu  main.cpp  main.cu
